--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,2 +1,47 @@
 @import "tailwindcss";
 
+.table-responsive {
+  width: 100%;
+  margin: 0 auto;
+}
+.table-responsive table{
+  width: 100%;
+}
+
+.table-responsive table td {
+  font-size: 12px;
+  color: #5a5a55;
+  padding: 2px 4px !important;
+
+}
+.table-responsive table th {
+  font-size: 12px;
+   color: #5a5a55;
+   font-weight: bold;
+   padding: 0 4px ;
+
+}
+.table-responsive table tr{
+  border: .5px solid rgb(212, 206, 206) !important;
+}
+.table-responsive table tr:hover{
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+.card{
+    border:1px solid rgba(0,0,0,.1);
+    border-radius: 5px;
+}
